--- a/css/main.scss
+++ b/css/main.scss
@@ -182,7 +182,7 @@
 @media screen and (max-width: 1300px) {
   .navbar {
     .logo {
-      margin-left: -150px;
+      margin-left: -180px;
     }
   }
   .navbar-container {
@@ -191,13 +191,10 @@
     align-items: center;
     height: 80px;
     z-index: 1;
-    width: 100%;
-    max-width: 1400px;
 
     .list-menu {
       display: flex;
       flex-direction: column;
-      width: 100%;
 
       li {
         a {
@@ -212,7 +209,6 @@
     .socials-menu {
       display: flex;
       flex-direction: column;
-      width: 100%;
 
       .social-btns {
         margin-bottom: 28px;
@@ -282,12 +278,10 @@
 
 // Header
 .hero {
-  height: calc(100vh - 80px);
-  width: 100%;
   background: url(/images/arkaplan8.jpg);
-  background-size: cover;
   background-position: center center;
   display: flex;
+  height: calc(100vh - 80px);
   align-items: center;
   justify-content: center;
   background-size: cover;
@@ -414,6 +408,30 @@
 }
 
 // hero responsive
+@media screen and (max-width: 1020px) {
+  .hero {
+    justify-content: center;
+    align-items: center;
+
+    .hero-left {
+      text-align: center;
+      margin-left: 0 !important;
+      font-size: 14px;
+      .button {
+        margin: 0 auto;
+      }
+
+      .button a {
+        width: 95%;
+      }
+    }
+
+    .hero-right {
+      display: none;
+      
+    }
+  }
+}
 @media screen and (max-width: 1100px) {
   .hero {
     .hero-left {
@@ -433,30 +451,7 @@
     }
   }
 }
-@media screen and (max-width: 1020px) {
-  .hero {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-    .hero-left {
-      text-align: center;
-      margin-left: 0;
-      .button {
-        width: 50%;
-        margin: 0 auto;
-      }
-
-      .button a {
-        width: 95%;
-      }
-    }
-
-    .hero-right {
-      margin: 0 auto;
-    }
-  }
-}
 
 // About Section
 .about-head {
@@ -471,7 +466,6 @@
   height: auto;
 
   .description-about {
-    width: 500px;
 
     p {
       line-height: 30px;
@@ -481,7 +475,8 @@
 
   .undraw-img {
     img {
-      height: 300px;
+      width: 100%;
+      height: auto;
     }
   }
 
@@ -571,12 +566,6 @@
       width: 60%;
       margin-bottom: 80px;
     }
-
-    .description-about {
-      h2 {
-        margin-right: -80px;
-      }
-    }
   }
 }
 @media screen and (max-width: 600px) {
@@ -586,7 +575,7 @@
       margin-bottom: 100px;
     }
     .description-about {
-      width: 500px;
+      margin: 0 auto 100px;
       p {
         margin-right: 20px;
       }
@@ -597,7 +586,6 @@
 // Blog Section
 
 .blog-section {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -616,7 +604,7 @@
       display: flex;
       margin: 2em;
       background-color: white;
-      width: 600px;
+      max-width: 600px;
 
       img {
         width: 240px;
@@ -683,14 +671,12 @@
 }
 @media screen and (max-width: 800px) {
   .cards {
-    margin: 0 50px;
     .card {
-      display: flex;
-      width: 500px !important;
+      flex-direction: column;      
 
       img {
-        height: 420px !important;
-        height: 400px;
+        width: 100% !important;
+        height: auto !important;
       }
     }
   }
@@ -698,7 +684,6 @@
 
 // Work Section
 .work-section {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -710,110 +695,53 @@
 
   .work-features {
     display: flex;
-    margin-bottom: 4em;
+    flex-wrap: wrap;
+    justify-content: center;
 
     .work-feature {
-      margin: 0 1.3em;
       position: relative;
-      width: 400px;
+      width: 300px;
       height: auto;
 
-      a {
+      &:not(:first-child){
+        margin-left: 3rem;
+      }
+
         img {
           box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
           width: 100%;
-          height: 100%;
+          height: auto;
           background-size: cover;
         }
-      }
-
-      .work-description {
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        transform: translateX(-50px);
-        transition: 500ms all;
-        opacity: 0;
-        width: 100%;
-        height: 100%;
-
-        &:hover {
-          transform: translateX(0);
-          opacity: 1;
-          background-color: rgba($primary-color, 0.9);
-        }
-
-        h5 {
-          font-size: 22px;
-          color: white;
-          font-weight: bold;
-        }
-        p {
-          color: rgb(204, 198, 198);
-          font-weight: 500;
-          font-size: 15px;
-          letter-spacing: 1px;
-        }
-      }
     }
   }
 }
 
-// calismalar responsive
-@media screen and (max-width: 1400px) {
+// work section responsive
+@media screen and (max-width: 1350px) {
   .work-features {
+    margin: 0 auto !important;
+    display: flex;
     flex-direction: column;
 
     .work-feature {
-      width: 800px !important;
-      height: auto;
-      margin: 40px 0 !important;
-
-      a {
+      margin-left: 0 !important;
+      margin-bottom: 3rem !important;
         img {
           width: 100% !important;
-          height: 100%;
+          height: auto;
         }
-      }
-    }
-  }
-}
-@media screen and (max-width: 930px) {
-  .work-features {
-    flex-direction: column;
-
-    .work-feature {
-      width: 600px !important;
-      height: auto;
-      margin: 30px 0 !important;
-
-      a {
-        img {
-          width: 100% !important;
-          height: 100%;
-        }
-      }
     }
   }
 }
 @media screen and (max-width: 670px) {
   .work-features {
-    flex-direction: column;
-
+    margin: 0 auto;
     .work-feature {
-      width: 400px !important;
-      height: auto;
-      margin: 15px 0 !important;
-
-      a {
+      margin-bottom: 3rem !important;
         img {
           width: 100% !important;
-          height: 100%;
-        }
+          height: auto;
       }
     }
   }
@@ -889,26 +817,31 @@
   .contact-inner {
     display: flex;
     flex-direction: column;
+    
 
     iframe {
-      width: 100% !important;
       height: 300px !important;
-      margin-bottom: 28px;
       border-radius: 0 !important;
-      margin-left: 0 !important;
+      margin: 0 auto 50px !important;
     }
   }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {  
   .contact-inner {
+   
     .form-box {
+      display: flex ;
+      align-items: center ;
+      justify-content: center ;
+      flex-direction: column;
       input {
         display: block;
         &:not(:first-child) {
           margin-left: 0 !important;
         }
-        width: 100% !important;
       }
+     
+      
     }
   }
 }
