--- a/css/main.scss
+++ b/css/main.scss
@@ -186,11 +186,6 @@
     }
   }
   .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    z-index: 1;
 
     .list-menu {
       display: flex;
@@ -220,26 +215,24 @@
       }
     }
     .uls {
+      background-color: #131313;
       display: flex;
       flex-direction: column;
-      margin: 0 165px 0 0;
       position: absolute;
       top: -1000px;
       opacity: 0;
       transform: all 0.5s ease;
+      transition: all 0.5s ease;
+      font-size: 1.2rem;
+      height: 80vh;
+      z-index: 999;
+      margin-right: 146px;
+
     }
 
     .uls.active {
-      display: flex;
-      background-color: #131313;
       top: 100%;
       opacity: 1;
-      margin: 0 165px 0 0;
-      transition: all 0.5s ease;
-      z-index: 999;
-      font-size: 1.2rem;
-      height: 70vh;
-      width: 100%;
     }
 
     .navbar-toggle {
@@ -466,7 +459,7 @@
   height: auto;
 
   .description-about {
-
+    max-width: 700px;
     p {
       line-height: 30px;
       letter-spacing: 1px;
@@ -481,7 +474,7 @@
   }
 
   .skills {
-    width: 300px;
+    width: 500px;
     height: 300px;
     padding: 0 20px;
     margin-top: -50px;
